--- a/course-management/src/main/resources/application.properties
+++ b/course-management/src/main/resources/application.properties
@@ -15,3 +15,8 @@ eureka.instance.lease-renewal-interval-in-seconds=30
 eureka.instance.lease-expiretime-duration-in-seconds=30
 
 ribbon.eureka.enabled=true
+
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
+
+management.endpoints.web.exposure.include=*
